Add jshint devel option (for console and alerts).

--- a/config/jshint.yml
+++ b/config/jshint.yml
@@ -3,6 +3,7 @@ exclude_paths: []
 options:
   boss:       true
   browser:    true
+  devel:      true
   curly:      true
   eqeqeq:     true
   eqnull:     true
